# staccato

./: .dockerignore  .travis.yml  CHANGES.md  Cargo.toml  Dockerfile  README.md  build-docker.sh  docker-build.sh  docker-push.sh  push-docker.sh
.circleci/: config.yml
benches/: lib.rs
ci/: travis_build.sh  travis_setup.sh
src/: main.rs
src/staccato/: lib.rs
tests/: lib.rs
