[package]
name = "staccato"
version = "0.1.9"
authors = ["Nick Pillitteri"]
description = "Statistics from the command line"
homepage = "https://github.com/56quarters/staccato"
repository = "https://github.com/56quarters/staccato.git"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["statistics", "stats", "cli"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
clap_derive = "3.0.0-beta.2"

[lib]
name = "staccato"
path = "src/staccato/lib.rs"

[badges]
travis-ci = { repository = "56quarters/staccato" }
